--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud.xml
@@ -4,15 +4,14 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="en">The Great Cloud</title>
+        <title type="mainTitle" xml:lang="en">The Great Cloud (1)</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Mahāmegha</title>
         <title type="mainTitle" xml:lang="Bo-Ltn">sprin chen po</title>
         <title type="mainTitle" xml:lang="bo">སྤྲིན་ཆེན་པོ།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sprin chen po zhes bya ba theg pa chen
-          po’i mdo</title>
-        <title type="longTitle" xml:lang="bo">འཕགས་པ་སྤྲིན་ཆེན་པོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
         <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The Great Cloud”</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Ārya­mahāmegha­nāma­mahāyāna­sūtra</title>
+        <title type="longTitle" xml:lang="bo">འཕགས་པ་སྤྲིན་ཆེན་པོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sprin chen po zhes bya ba theg pa chen po’i mdo</title>
         <title type="otherTitle" xml:lang="zh">大雲經</title>
         <title type="otherTitle" xml:lang="zh">（大正藏：大方等無想經）</title>
         <author ref="eft:team-37" role="translatorMain">Translated by the Mahamegha Translation
@@ -27,7 +26,7 @@
         <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.2 <date>2022</date>
+                <edition>v 1.1.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -63,7 +62,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-11-17T18:34:08.485Z" user="admin">17/11/2022 18:34:08</note>
+        <note type="lastUpdated" date-time="2022-11-18T11:17:27.797Z" user="admin">18/11/2022 11:17:27</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">Auto
@@ -97,11 +96,12 @@
         <note type="updated" update="translation-status" value="2" date-time="2022-08-31T13:03:21.728Z" user="line-tofte">2</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-31T13:03:21.728Z" user="line-tofte">Auto
           (update-publication-status)</note>
-          <note type="updated" update="translation-status" value="1.a" date-time="2022-11-14T10:35:32.4Z" user="sameer">1.a</note>
-          <note type="updated" update="text-version" value="1.0.0" date-time="2022-11-14T10:35:32.4Z" user="sameer">First published version</note>
-          <note type="updated" update="text-version" value="1.0.1" date-time="2022-11-14T14:48:34.9Z" user="konchog">Various fixes throughout front matter, as wel as one in the translation, documented in an email.</note>
-          <note type="updated" update="text-version" value="1.1.1" date-time="2022-11-16T20:37:57.094Z" user="john">Further edits around the choices "discourse" and æsūtra" as well as adjustments to the beginning of the introduction and thematic line breaks.</note>
-          <note type="updated" update="text-version" value="1.1.2" date-time="2022-11-17T18:34:05.533Z" user="john">Changed some direct speech to indirect in 2.6-7 and 2.47-48.</note>
+        <note type="updated" update="translation-status" value="1.a" date-time="2022-11-14T10:35:32.4Z" user="sameer">1.a</note>
+        <note type="updated" update="text-version" value="1.0.0" date-time="2022-11-14T10:35:32.4Z" user="sameer">First published version</note>
+        <note type="updated" update="text-version" value="1.0.1" date-time="2022-11-14T14:48:34.9Z" user="konchog">Various fixes throughout front matter, as wel as one in the translation, documented in an email.</note>
+        <note type="updated" update="text-version" value="1.1.1" date-time="2022-11-16T20:37:57.094Z" user="john">Further edits around the choices "discourse" and æsūtra" as well as adjustments to the beginning of the introduction and thematic line breaks.</note>
+        <note type="updated" update="text-version" value="1.1.2" date-time="2022-11-17T18:34:05.533Z" user="john">Changed some direct speech to indirect in 2.6-7 and 2.47-48.</note>
+          <note type="updated" update="text-version" value="1.1.3" date-time="2022-11-18T11:17:21.863Z" user="john">Auto (update-titles)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -4113,7 +4113,7 @@
               king</distinct>
                         <note place="end" xml:id="UT22084-064-002-442"> “Nāga king” is added
               for clarification.</note>
-            <distinct>Son of Vast Wealth</distinct>. There is the Dharma gateway called
+            <distinct>Vāsuki</distinct>. There is the Dharma gateway called
               <distinct>engaging in the display of one’s own strength</distinct>. There is the
             Dharma gateway called <distinct>engaging in the enjoyment of sound</distinct>. There is
             the Dharma gateway called <distinct>entering the waves</distinct>. There is the Dharma
@@ -12209,15 +12209,13 @@
                 Śākyamuni.</term>
             </gloss>
                     </item>
-          <item>
-                        <gloss type="person" xml:id="UT22084-064-002-1407">
+          <!--<item><gloss type="person" xml:id="UT22084-064-002-1407">
               <term>Son of Vast Wealth</term>
               <term xml:lang="Bo-Ltn" status="verified">nor rgyas kyi bu </term>
               <term xml:lang="bo">ནོར་རྒྱས་ཀྱི་བུ།</term>
               <term xml:lang="Sa-Ltn"/>
               <term type="definition">A nāga king.</term>
-            </gloss>
-                    </item>
+            </gloss></item>-->
           <item>
                         <gloss type="person" xml:id="UT22084-064-002-1408">
               <term>Ānanda</term>
