--- a/translations/kangyur/placeholders/063-001_toh220-eradicating_confused_discipline_a_scriptural_collection_of_the_buddha.xml
+++ b/translations/kangyur/placeholders/063-001_toh220-eradicating_confused_discipline_a_scriptural_collection_of_the_buddha.xml
@@ -22,11 +22,11 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-063-001"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-12T12:37:10.219Z" user="admin">12/10/2022 12:37:10</note>
+                <note type="lastUpdated" date-time="2022-11-21T09:59:30.48Z" user="admin">21/11/2022 09:59:30</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary added</note>
@@ -61,6 +61,8 @@
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-09-26T13:45:04.943Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-09-26T13:45:04.943Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-10-12T12:37:04.71Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2022-11-21T09:59:24.88Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-11-21T09:59:24.88Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
