--- a/translations/kangyur/translations/067-005_toh266-bouquet_of_flowers.xml
+++ b/translations/kangyur/translations/067-005_toh266-bouquet_of_flowers.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="../../../schema/current/translation.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
+<tei:TEI xmlns="http://www.tei-c.org/ns/1.0" xmlns:tei="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
             <titleStmt>
@@ -37,7 +37,7 @@
                     Higgins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.17 <date>2021</date>
+                <edition>v 1.0.18 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -73,7 +73,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T16:16:16.55Z" user="admin">29/06/2022 16:16:16</note>
+                <note type="lastUpdated" date-time="2022-11-21T15:42:21.309Z" user="admin">21/11/2022 15:42:21</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-24T14:56:55.963Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-11-20T13:14:37.063Z" user="john">2.c</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
@@ -118,6 +118,7 @@
                 <note type="updated" update="text-version" value="1.0.15" date-time="2021-08-27T19:23:24.154Z" user="celso">Skt. glossary corrections from Wiesied applied</note>
                 <note type="updated" update="text-version" value="1.0.16" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.17" date-time="2022-06-29T16:16:08.952Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.18" date-time="2022-11-21T15:42:18.387Z" user="martina-cotter">Updated glossary entries.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -3584,7 +3585,7 @@
                             <term xml:lang="bo">ཀུན་ཏུ་སྤོས།</term>
                             <term xml:lang="Sa-Ltn"/>
                             <term type="definition">Name of the thus-gone one of the world system
-                                Dense Cloud.</term>
+                                Attainment of All Powerful Forces.</term>
                         </gloss>
                     </item>
                     <item>
@@ -5241,8 +5242,7 @@
                             <term xml:lang="Bo-Ltn">sprin stug po </term>
                             <term xml:lang="bo">སྤྲིན་སྟུག་པོ།</term>
                             <term xml:lang="Sa-Ltn"/>
-                            <term type="definition">Name of the world system of the thus-gone one
-                                Always Fragrant</term>
+                            <term type="definition">Name of the thus-gone one venerated by Always Fragrant when he was engaged in the conduct of the bodhisattvas.</term>
                         </gloss>
                     </item>
                     <item>
@@ -6458,4 +6458,4 @@
             </div>
         </back>
     </text>
-</TEI>
+</tei:TEI>
