--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud.xml
@@ -26,7 +26,7 @@
         <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.3 <date>2022</date>
+                <edition>v 1.1.4 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -62,7 +62,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-11-18T11:17:27.797Z" user="admin">18/11/2022 11:17:27</note>
+        <note type="lastUpdated" date-time="2022-11-22T17:00:52.401Z" user="admin">22/11/2022 17:00:52</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">Auto
@@ -102,6 +102,7 @@
         <note type="updated" update="text-version" value="1.1.1" date-time="2022-11-16T20:37:57.094Z" user="john">Further edits around the choices "discourse" and æsūtra" as well as adjustments to the beginning of the introduction and thematic line breaks.</note>
         <note type="updated" update="text-version" value="1.1.2" date-time="2022-11-17T18:34:05.533Z" user="john">Changed some direct speech to indirect in 2.6-7 and 2.47-48.</note>
           <note type="updated" update="text-version" value="1.1.3" date-time="2022-11-18T11:17:21.863Z" user="john">Auto (update-titles)</note>
+          <note type="updated" update="text-version" value="1.1.4" date-time="2022-11-22T17:00:49.401Z" user="andre">Glossary revised and activated in CG</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
