--- a/translations/kangyur/translations/088-022_toh528,858-the_dharani_of_agrapradipa.xml
+++ b/translations/kangyur/translations/088-022_toh528,858-the_dharani_of_agrapradipa.xml
@@ -30,10 +30,10 @@
                                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2">
+                        <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
@@ -81,7 +81,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-11-22T19:11:30.522Z" user="admin">22/11/2022 19:11:30</note>
+                                <note type="lastUpdated" date-time="2022-11-22T19:13:33.724Z" user="admin">22/11/2022 19:13:33</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-01-13T09:56:19.863Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2022-01-31T10:53:56.195Z" user="line-tofte">3</note>
@@ -127,6 +127,8 @@
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-08-25T13:21:20.136Z" user="line-tofte">Auto (update-publication-status)</note>
                             <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-16T09:11:04.181Z" user="line-tofte">Auto (update-contributors)</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2022-11-22T19:11:27.786Z" user="martina-cotter">First published version</note>
+                            <note type="updated" update="translation-status" value="1.a" date-time="2022-11-22T19:13:28.165Z" user="martina-cotter">1.a</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2022-11-22T19:13:28.165Z" user="martina-cotter">Auto (update-publication-status)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
