--- a/translations/kangyur/translations/061-018_toh198-maitreyas_setting_out.xml
+++ b/translations/kangyur/translations/061-018_toh198-maitreyas_setting_out.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.7 <date>2021</date>
+                <edition>v 1.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -65,7 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:32:10.931Z" user="admin">26/07/2022 06:32:10</note>
+                <note type="lastUpdated" date-time="2022-11-22T19:20:00.849Z" user="admin">22/11/2022 19:20:00</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-01-27T13:16:15.494Z" user="mike">2.e</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-03-13T13:19:42.193Z" user="line-tofte">2.f</note>
@@ -104,6 +104,7 @@
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-01-06T20:29:21.784Z" user="celso">activated pending link</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2022-07-26T06:31:35.79Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-26T06:32:03.201Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.8" date-time="2022-11-22T19:19:58.031Z" user="andre">Correction to toh reference 556-57 to 555-57</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -194,7 +195,8 @@
                         apply if one wishes to be reborn close to him at that time. Other sūtras in which previous lives
                         of the bodhisattva Maitreya are recounted include <title xml:lang="en">The White Lotus of the
                             Good Dharma</title>, <title xml:lang="en">The Sublime Golden Light</title> (Toh
-                        556–57)<ref rend="pending" target="https://read.84000.co/translation/toh556.html"/>
+                        555–57)<ref rend="pending" target="https://read.84000.co/translation/toh555.html"/>
+                        <ref rend="pending" target="https://read.84000.co/translation/toh556.html"/>
                         <ref rend="pending" target="https://read.84000.co/translation/toh557.html"/>, and <title xml:lang="en">The
                             Question of Maitreya</title> (Toh 85).<note place="end" xml:id="UT22084-061-018-13">
                             Interestingly, the bodhisattva qualities listed in <title xml:lang="en">Maitreya’s Setting
