--- a/translations/kangyur/translations/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
+++ b/translations/kangyur/translations/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
@@ -4,38 +4,34 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa bgro
-                                        ba</title>
-                                <title type="mainTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་བགྲོ་བ།</title>
                                 <title type="mainTitle" xml:lang="en">Discussions of Thus-Gone
                                         Ones</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Tathāgata­saṅgīti</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པ་བགྲོ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs
-                                        pa bgro ba zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa bgro
+                                        ba</title>
+                                <title type="mainTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་བགྲོ་བ།</title>
                                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle
                                         Discourse: Discussions of Thus-Gone Ones</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Āryatathāgata­saṅgīti­nāmamahāyāna­sūtra</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs
+                                        pa bgro ba zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པ་བགྲོ་བ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                                 <title type="otherTitle" xml:lang="zh">《如來議論經》</title>
-                                <author ref="eft:team-9" role="translatorMain">Translated by the
+                                <author role="translatorMain" ref="eft:team-9">Translated by the
                                         Dharmachakra Translation Committee<lb/>under the patronage
                                         and supervision of 84000: Translating the Words of the
                                         Buddha</author>
-                                <author role="translatorEng" ref="eft:person-60">Benjamin
-                                        Ewing</author>
-                                <consultant role="projectManager" ref="eft:person-50">Andreas
-                                        Doctor</consultant>
-                                <editor role="projectEditor" ref="eft:person-250">Rory
-                                        Lindsay</editor>
+                                <author role="translatorEng" ref="eft:person-60">Benjamin Ewing</author>
+                                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
-                                <editor role="projectEditor" ref="eft:person-74">Ryan
-                                        Damron</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina
-                                        Cotter</editor>
+                                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
                                 <sponsor ref="sponsors.xml#sponsor-47">马珂，王晓娟</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -78,7 +74,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-10-21T08:02:15.091Z" user="admin">21/10/2022 08:02:15</note>
+                                <note type="lastUpdated" date-time="2022-11-24T10:24:23.925Z" user="admin">24/11/2022 10:24:23</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-06-27T14:16:17.494Z" user="john">2.g</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-27T13:01:38.603Z" user="mike">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:38.603Z" user="mike">2.h</note>
@@ -110,8 +106,9 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-09-26T08:52:37.999Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-10-21T08:02:10.765Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-21T08:02:10.765Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2022-10-21T08:02:10.765Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2022-10-21T08:02:10.765Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-24T10:24:22.442Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
