--- a/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
+++ b/translations/kangyur/placeholders/054-007_toh126-the_sutra_like_gold_dust.xml
@@ -12,11 +12,11 @@
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-054-007"/>
                 <date/>
             </publicationStmt>
@@ -32,9 +32,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-09T15:38:36.472Z" user="admin">09/11/2022 15:38:36</note>
+                <note type="lastUpdated" date-time="2022-11-24T13:29:48.858Z" user="admin">24/11/2022 13:29:48</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-09T15:38:30.759Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-09T15:38:30.759Z" user="line-tofte">Auto (update-publication-status)</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-09T15:38:30.759Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-09T15:38:30.759Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2022-11-24T13:29:43.308Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-24T13:29:43.308Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
