--- a/translations/kangyur/translations/062-001_toh201-the_seal_of_engagement_in_kindling_the_power_of_faith.xml
+++ b/translations/kangyur/translations/062-001_toh201-the_seal_of_engagement_in_kindling_the_power_of_faith.xml
@@ -28,7 +28,7 @@
                 <sponsor ref="sponsors.xml#sponsor-4">Shakya Dewa</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.5 <date>2022</date>
+                <edition>v 1.1.6 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -60,7 +60,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:38:50.189Z" user="admin">26/07/2022 06:38:50</note>
+                <note type="lastUpdated" date-time="2022-11-24T18:50:34.612Z" user="admin">24/11/2022 18:50:34</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:17:19.779Z" user="mike">2.d</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2021-03-01T11:18:42.312Z" user="line-tofte">2.c</note>
@@ -93,6 +93,7 @@
                 <note type="updated" update="text-version" value="1.1.3" date-time="2021-09-22T15:25:13.299Z" user="andre">"Praśrabdhi" gloss. entry added and "Pliancy" changed to "Ease" </note>
                 <note type="updated" update="text-version" value="1.1.4" date-time="2022-03-17T16:58:11.729Z" user="celso">adjusted cache in glossary linking according to new hyphen rules</note>
                 <note type="updated" update="text-version" value="1.1.5" date-time="2022-07-26T06:38:42.391Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.1.6" date-time="2022-11-24T18:50:31.738Z" user="martina-cotter">update typos.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -166,7 +167,7 @@
                         cited under a slightly different but similar title. See Skilling 2013, p. 204.</note> 
                     In the Chinese Taishō canon, too, the sūtra (Taishō 305) is grouped together with the Buddhāvataṃsaka collection of scriptures. 
                     Indeed, the setting, the fact that Mañjuśrī and Samantabhadra are the principal interlocutors, and some other features of the sūtra 
-                    do suggest an affinity with the Buddhāvataṃsaka scriptures, while the giving of teachings by the Buddha himself suggest
+                    do suggest an affinity with the Buddhāvataṃsaka scriptures, while the giving of teachings by the Buddha himself suggests
                     otherwise. Whatever the case, in the Degé Kangyur the sūtra is found not in the Buddhāvataṃsaka section, but rather
                     in the General Sūtra section (<foreign xml:lang="Sa-Ltn">mdo sde</foreign>), and unlike several other sūtras in the section that wholly or partly
                     correspond to chapters of the Buddhāvataṃsaka<note place="end" xml:id="UT22084-062-001-851">These include the 
@@ -467,7 +468,7 @@
                         attachment</distinct>, refers to the nature of attachment. Why? Because
                     non-attachment is nothing other than the nature of attachment. Therefore, since non-attachment is
                     nothing other than the nature of attachment, the nature of attachment is non-attachment. 
-                    By recognizing that the nature of the nature of attachment is non-attachment, it is known that all phenomena are without attachment.</p>
+                    By recognizing that the nature of attachment is non-attachment, it is known that all phenomena are without attachment.</p>
                 <milestone unit="chunk" xml:id="UT22084-062-001-50"/>
                 <p tid="50">“(2) One can find inspiration by thinking, ‘I will live by understanding the absence of conceit—which
                     is no different from conceit—thereby inspiring others to understand the absence of conceit, which is
@@ -492,7 +493,7 @@
                     the nature of being. Why? Because the nature of non-being is nothing other than the
                     nature of being. Therefore, since non-being is nothing other than the nature of being, the nature of
                     being is non-being. 
-                    By recognizing that the nature of the nature of
+                    By recognizing that the nature of
                     being is non-being, it is known that all phenomena are without being.</p>
                 <milestone unit="chunk" xml:id="UT22084-062-001-53"/>
                 <p tid="53">“(5) One can find inspiration by thinking, ‘I will live by understanding the absence of
@@ -682,7 +683,7 @@
                     the barren woman’s child. Therefore, since what is not the barren woman’s child is nothing other
                     than the nature of the barren woman’s child, the nature of the barren woman’s child is what is not
                     the barren woman’s child. 
-                    By recognizing that the nature of the barren woman’s child is what is not the barren woman’s child, <ref cRef="F.10.b" type="folio" xml:id="UT22084-062-001-833"/> it is known that all phenomena 
+                    By recognizing that the nature of what is not the barren woman's child is the barren woman's child, <ref cRef="F.10.b" type="folio" xml:id="UT22084-062-001-833"/> it is known that all phenomena 
                     are like a barren woman’s child.</p>
                 <milestone unit="chunk" xml:id="UT22084-062-001-80"/>
                 <p tid="80">“(4) One can find inspiration by thinking, ‘I will live by understanding mirages—which are no
@@ -1709,7 +1710,7 @@
                 <milestone unit="chunk" xml:id="UT22084-062-001-339"/>
                 <p tid="337">“(3) One can find inspiration by thinking, ‘I will live by being loving when observing the teachings,
                     thereby inspiring others to be loving when observing the teachings.’ In this case, <distinct>being
-                        loving when observing the teachings</distinct> means to be free from reference point
+                        loving when observing the teachings</distinct> means to be free from reference points
                     regarding anything and also to not form any thoughts about them.</p>
                 <milestone unit="chunk" xml:id="UT22084-062-001-340"/>
                 <p tid="338">“(4) One can find inspiration by thinking, ‘I will live by the initial accumulation of merit, thereby
@@ -3285,7 +3286,7 @@
                     The latter would create incalculably greater merit than the former.</p>
                 <milestone unit="chunk" xml:id="UT22084-062-001-557"/>
                 <p tid="552">“Otherwise, Mañjuśrī, say that a son or daughter of noble family, on a daily basis for an ocean-like
-                    span of eons numbering the same amount as sands in the Ganges, gave flavorful, divine food as well
+                    span of eons numbering the same amount as the sands in the Ganges, gave flavorful, divine food as well
                     as divine garments to as many people guided by faith as there are atoms in every world-system. Then
                     say that another son or daughter of noble family one day offered a single meal to someone guided by
                     the Dharma. The latter would create incalculably greater merit than the former.</p>
