--- a/translations/kangyur/translations/072-013_toh313,617,974-auspicious_night.xml
+++ b/translations/kangyur/translations/072-013_toh313,617,974-auspicious_night.xml
@@ -30,7 +30,7 @@
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2022</date>
+                <edition>v 1.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -85,7 +85,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T16:09:01.791Z" user="admin">29/06/2022 16:09:01</note>
+                <note type="lastUpdated" date-time="2022-11-25T11:12:30.046Z" user="admin">25/11/2022 11:12:30</note>
                 <note type="updated" update="text-version" value="" date-time="2019-09-26T06:58:17.409Z" user="andreas">0.1 2019</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement
                     updated</note>
@@ -142,6 +142,7 @@
                 <note type="updated" update="text-version" value="1.0.4" date-time="2022-05-13T18:49:59.994Z" user="martina-cotter">Updated typo.</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2022-06-29T16:08:54.238Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.7" date-time="2022-11-25T11:12:27.224Z" user="andre">Mentions to the *aṣṭasenā removed from definitions</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1203,8 +1204,7 @@
                             <term xml:lang="Sa-Ltn" status="verified">mahoraga</term>
                             <term type="definition">Literally “great serpents,” mahoragas are supernatural beings depicted as large, subterranean
                                 beings with human torsos and heads and the lower bodies of serpents. Their movements are said to cause earthquakes.
-                                They are one group among the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>, eight groups of nonhuman
-                                beings said to have been present when the Buddha preached the Mahāyāna sūtras. </term>
+                                </term>
                         </gloss>
                     </item>
                     <item>
@@ -1269,8 +1269,7 @@
                             <term xml:lang="bo">དྲི་ཟ།</term>
                             <term xml:lang="Sa-Ltn" status="verified">gandharva</term>
                             <term type="definition">A class of generally benevolent nonhuman beings who inhabit the sky and are most renowned as
-                                celestial musicians. They are one of the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>, eight groups of
-                                nonhuman beings said to have been present when the Buddha preached the Mahāyāna sūtras. </term>
+                                celestial musicians. </term>
                         </gloss>
                     </item>
                     <item>
@@ -1279,9 +1278,8 @@
                             <term xml:lang="Bo-Ltn" status="verified">nam mkha’ lding</term>
                             <term xml:lang="bo">ནམ་མཁའ་ལྡིང་།</term>
                             <term xml:lang="Sa-Ltn" status="verified">garuḍa</term>
-                            <term type="definition">A class of nonhuman being described as eagle-type birds with a gigantic wingspan. They are the
-                                traditional enemies of the nāgas. Literally “sky-soarer” in Tibetan, they are one of the <foreign xml:lang="Sa-Ltn">aṣṭasenā</foreign>, eight groups of nonhuman beings said to have been present when the Buddha preached the
-                                Mahāyāna sūtras.</term>
+                            <term type="definition">Literally “sky-soarer” in Tibetan, a class of nonhuman being described as eagle-type birds with a gigantic wingspan. They are the
+                                traditional enemies of the nāgas. </term>
                         </gloss>
                     </item>
                     <item>
@@ -1293,8 +1291,7 @@
                             <term type="definition">Yakṣas are ambivalent nature spirits. According to Indian mythology, they inhabit trees, ponds,
                                 and other natural places, and serve as guardians of a certain locale. They possess magical powers, are shapeshifters,
                                 and can appear as helpful to and protective of the Buddha, his disciples, and the teachings. They can also be
-                                malevolent forces that create obstacles and illness. They are one group among the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>, eight groups of nonhuman beings said to have been present when the Buddha preached
-                                the Mahāyāna sūtras. </term>
+                                malevolent forces that create obstacles and illness.</term>
                         </gloss>
                     </item>
                     <item>
@@ -1330,8 +1327,7 @@
                             <term xml:lang="bo">མིའམ་ཅི།</term>
                             <term xml:lang="Sa-Ltn" status="verified">kinnara</term>
                             <term type="definition">A class of nonhuman beings that are half-human, half-animal, typically with animal heads atop
-                                human bodies. Kinnaras are one group among the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>, eight groups
-                                of nonhuman beings said to have been present when the Buddha preached the Mahāyāna sūtras. </term>
+                                human bodies. </term>
                         </gloss>
                     </item>
                     <item>
