--- a/translations/kangyur/translations/088-001_toh507,883-the_dharani_for_secret_relics.xml
+++ b/translations/kangyur/translations/088-001_toh507,883-the_dharani_for_secret_relics.xml
@@ -25,7 +25,7 @@
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -68,7 +68,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-11-06T18:16:29.158Z" user="admin">06/11/2022 18:16:29</note>
+        <note type="lastUpdated" date-time="2022-11-25T11:25:17.905Z" user="admin">25/11/2022 11:25:17</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-11-01T13:40:58.125Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-11-01T13:40:58.125Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-11-08T08:44:48.238Z" user="line-tofte">3</note>
@@ -108,6 +108,7 @@
           <note type="updated" update="text-version" value="1.0.1" date-time="2022-10-27T09:49:59.795Z" user="konchog">Numerous fixes throughout documented in an email</note>
           <note type="updated" update="text-version" value="1.0.2" date-time="2022-10-28T12:47:27.212Z" user="martina-cotter">updated notes.</note>
           <note type="updated" update="text-version" value="1.0.3" date-time="2022-11-06T18:16:26.298Z" user="andre">Glossary matching revised and activated in CG</note>
+          <note type="updated" update="text-version" value="1.0.4" date-time="2022-11-25T11:25:15.103Z" user="andre">Mentions to the *aṣṭasenā removed from definitions</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -1103,10 +1104,7 @@
               <term xml:lang="Sa-Ltn">yakṣa</term>
               <term type="definition">A class of nonhuman beings who haunt or protect natural places
                 and cities. They can be malevolent or benevolent, and are known for bestowing wealth
-                and worldly boons, as well as for causing harm, illness, and obstacles. They are one
-                of the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>—eight groups of
-                nonhuman beings said to have been present when the Buddha preached the Mahāyāna
-                sūtras.</term>
+                and worldly boons, as well as for causing harm, illness, and obstacles.</term>
             </gloss>
                     </item>
           <item>
@@ -1116,8 +1114,7 @@
               <term xml:lang="bo">དྲི་ཟ།</term>
               <term xml:lang="Sa-Ltn">gandharva</term>
               <term type="definition">A class of generally benevolent nonhuman beings who inhabit
-                the sky and are most renowned as celestial musicians. They are one of the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>—eight groups of nonhuman beings
-                said to have been present when the Buddha preached the Mahāyāna sūtras. </term>
+                the sky and are most renowned as celestial musicians.</term>
             </gloss>
                     </item>
           <item>
@@ -1144,10 +1141,7 @@
                             <term xml:lang="bo">མཁའ་ལྡིང་།</term>
               <term xml:lang="Sa-Ltn">garuḍa</term>
               <term type="definition">A class of nonhuman beings described as eagle-type birds with
-                a gigantic wingspan. They were traditionally enemies of the nāgas. They are one of
-                the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>—eight groups of
-                nonhuman beings said to have been present when the Buddha preached the Mahāyāna
-                sūtras.</term>
+                a gigantic wingspan. They were traditionally enemies of the nāgas. </term>
             </gloss>
                     </item>
           <item>
@@ -1158,8 +1152,7 @@
               <term xml:lang="Sa-Ltn">kinnara</term>
               <term type="definition">A class of nonhuman beings that are half-human, half-animal,
                 typically with animal heads atop human bodies. The term literally means “Is that
-                human?” Renowned for having musical voices, kinnaras are one of the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>—eight groups of nonhuman beings
-                said to have been present when the Buddha preached the Mahāyāna sūtras.</term>
+                human?” They are renowned for having musical voices.</term>
             </gloss>
                     </item>
           <item>
@@ -1170,10 +1163,7 @@
               <term xml:lang="Sa-Ltn">mahoraga</term>
               <term type="definition">Literally “great serpents,” mahoragas are supernatural beings
                 depicted as large, subterranean beings with human torsos and heads and the lower
-                bodies of serpents. Their movements are said to cause earthquakes. They are one
-                group among the <foreign xml:lang="Sa-Ltn" type="term">aṣṭasenā</foreign>—the flock
-                of nonhuman beings said to have been present when the Buddha preached the Mahāyāna
-                sūtras. </term>
+                bodies of serpents. Their movements are said to cause earthquakes. </term>
             </gloss>
                     </item>
           <item>
