--- a/translations/kangyur/placeholders/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
+++ b/translations/kangyur/placeholders/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
@@ -17,10 +17,10 @@
                 <editor role="proofreader" ref="eft:person-397">Ritiman Das</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-034-015"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-18T12:07:34.992Z" user="admin">18/05/2022 12:07:34</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T12:06:33.603Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T12:07:31.286Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-11-28T11:31:22.075Z" user="admin">28/11/2022 11:31:22</note>    <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-18T12:06:33.603Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-18T12:07:31.286Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-28T11:31:16.537Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-28T11:31:16.537Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
