--- a/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -19,10 +19,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2021</date>
+                <edition>v 0.0.12 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-034-007"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T10:40:45.026Z" user="admin">02/08/2022 10:40:45</note>
+                <note type="lastUpdated" date-time="2022-11-29T10:14:51.311Z" user="admin">29/11/2022 10:14:51</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto (update-contributors)</note>
@@ -65,6 +65,8 @@
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:39:31.74Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-08-02T10:39:31.74Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-08-02T10:40:37.328Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2022-11-29T10:14:45.8Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-11-29T10:14:45.8Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
