--- a/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
+++ b/translations/kangyur/placeholders/065-004_toh241-the_sutra_of_the_wheel_of_samadhi.xml
@@ -17,9 +17,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <consultant role="projectManager" ref="eft:person-186">Zhuo Siyu</consultant>
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2019</date>
+                <edition>v 0.1.10 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-10-27T09:53:49.72Z" user="admin">27/10/2022 09:53:49</note>
+                <note type="lastUpdated" date-time="2022-11-29T13:47:06.839Z" user="admin">29/11/2022 13:47:06</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-09T06:16:46.43Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2022-03-14T11:00:47.488Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -56,6 +57,7 @@
                 <note type="updated" update="text-version" value="0.1.8" date-time="2022-09-14T07:44:00.626Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-10-27T09:53:44.112Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.1.9" date-time="2022-10-27T09:53:44.112Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.10" date-time="2022-11-29T13:47:01.28Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
