--- a/translations/kangyur/placeholders/062-009_toh209-the_sutra_proclaiming_the_lions_roar.xml
+++ b/translations/kangyur/placeholders/062-009_toh209-the_sutra_proclaiming_the_lions_roar.xml
@@ -12,11 +12,11 @@
                 <author role="translatorMain" ref="contributors.xml#team-27"/>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-062-009"/>
                 <date/>
             </publicationStmt>
@@ -32,9 +32,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2019-12-20T13:03:54.579Z" user="admin">20/12/2019 13:03:54</note>
+                <note type="lastUpdated" date-time="2022-11-30T13:21:58.735Z" user="admin">30/11/2022 13:21:58</note>
             
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-11-30T13:21:53.283Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-11-30T13:21:53.283Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
