--- a/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/translations/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -6,8 +6,8 @@
          <titleStmt>
             <title type="mainTitle" xml:lang="en">The Questions of Subāhu</title>
             <title type="mainTitle" xml:lang="Sa-Ltn">subāhu­paripṛcchā</title>
-            <title type="mainTitle" xml:lang="bo">དཔུང་བཟང་གིས་ཞུས་པ།</title>
             <title type="mainTitle" xml:lang="Bo-Ltn">dpung bzang gis zhus pa</title>
+            <title type="mainTitle" xml:lang="bo">དཔུང་བཟང་གིས་ཞུས་པ།</title>
             <title type="mainTitle" xml:lang="bo">འཕགས་པ་དཔུང་བཟང་གིས་ཞུས་པ་ཞེས་བྱ་བའི་རྒྱུད།</title>
             <title type="longTitle" xml:lang="en">The Noble Tantra: The Questions of Subāhu</title>
             <title type="longTitle" xml:lang="Sa-Ltn">Ārya­subāhu­pari­pṛcchānāma­tantra</title>
@@ -25,9 +25,10 @@
             <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
             <consultant role="dharmaMaster" ref="eft:person-199">Lozang Jamspal</consultant>
+            <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
          </titleStmt>
          <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
          <publicationStmt status="2">
@@ -62,7 +63,7 @@
             </bibl>
          </sourceDesc>
          <notesStmt>
-            <note type="lastUpdated" date-time="2022-11-24T10:29:22.921Z" user="admin">24/11/2022 10:29:22</note>
+            <note type="lastUpdated" date-time="2022-12-01T11:04:42.105Z" user="admin">01/12/2022 11:04:42</note>
             <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
             <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
             <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto
@@ -103,7 +104,8 @@
             <note type="updated" update="text-version" value="0.0.3" date-time="2022-10-03T11:04:33.207Z" user="john">Two or three minor edits to introduction.</note>
             <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-24T10:28:16.326Z" user="line-tofte">Auto (update-contributors)</note>
             <note type="updated" update="text-version" value="0.0.5" date-time="2022-11-24T10:28:48.636Z" user="line-tofte">Auto (update-contributors)</note>
-             <note type="updated" update="text-version" value="0.0.6" date-time="2022-11-24T10:29:17.126Z" user="line-tofte">Auto (update-contributors)</note>
+            <note type="updated" update="text-version" value="0.0.6" date-time="2022-11-24T10:29:17.126Z" user="line-tofte">Auto (update-contributors)</note>
+             <note type="updated" update="text-version" value="0.0.7" date-time="2022-12-01T11:04:36.278Z" user="line-tofte">Auto (update-contributors)</note>
          </notesStmt>
       </fileDesc>
    </teiHeader>
